# swarm-playground

./: README.md  pyproject.toml
examples/basic/: minimum.py
src/swarm_playground/customer_service_routine/: core.py  main.py  model.py
src/swarm_playground/employee_support/: agent.py  eval.py  main.py  util.py
src/swarm_playground/get_temperature/: main.py
